--- a/index.html
+++ b/index.html
@@ -4,15 +4,42 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Assistant</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      max-width: 700px;
+    }
+    #question {
+      width: 100%;
+      padding: 10px;
+      font-size: 1rem;
+      box-sizing: border-box;
+    }
+    #askBtn {
+      margin-top: 10px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    #answer {
+      margin-top: 30px;
+      white-space: pre-wrap;
+      border: 1px solid #ccc;
+      padding: 15px;
+      background-color: #f9f9f9;
+      min-height: 100px;
+    }
+  </style>
 </head>
 <body>
   <h1>Welcome to My Assistant</h1>
   <p>Ask me anything about your files!</p>
-  <input type="text" id="question" placeholder="Type your question here" style="width: 300px;" />
+  <input type="text" id="question" placeholder="Type your question here" />
   <button id="askBtn">Ask</button>
 
   <h2>Answer:</h2>
-  <div id="answer" style="white-space: pre-wrap; border: 1px solid #ccc; padding: 10px; width: 80%; max-width: 600px;"></div>
+  <div id="answer">Your answer will appear here.</div>
 
   <script>
     const askBtn = document.getElementById('askBtn');
@@ -28,11 +55,16 @@
       answerDiv.textContent = 'Thinking...';
 
       try {
-        const response = await fetch('https://ed-assistant-backend.onrender.com', {  // Replace with your backend URL
+        const response = await fetch('https://ed-assistant-backend.onrender.com/', {  // Replace with your backend URL
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ question })
         });
+
+        if (!response.ok) {
+          throw new Error(`Server error: ${response.status}`);
+        }
+
         const data = await response.json();
         if (data.answer) {
           answerDiv.textContent = data.answer + '\n\nSources:\n' + (data.sources || 'None');
